@@ -287,7 +287,10 @@
 
   \subsection{BUG FIXES}{
     \itemize{
-      \item Place holder.
+      \item When \command{R CMD build} is run in an encoding other than
+      the one specified in the package's \file{DESCRIPTION} file it
+      tries harder to expand the \code{authors@R} field in the specified
+      encoding.  (PR{14958}.)
     }
   }
 }
